fix validation bug, add validator for discount value, change z-index of Navbar greater than item images

--- a/sass/main.scss
+++ b/sass/main.scss
@@ -80,7 +80,7 @@ li {
 // Navbar and Footer
 #main {
   &-navbar {
-    z-index: 99;
+    z-index: 101;
     background-color: $primary-color;
 
     .nav-brand {
